feat: configurar IdentityServer com suporte a Identity e DbContext
- Criada pasta Data com classes ApplicationUser (herdando de IdentityUser) e AppDbContext (herdando de IdentityDbContext<ApplicationUser>)
- Configurada string de conexão no appsettings.json
- Registrado serviço de contexto no container DI na classe Program
- Registrado serviço do Identity na classe Program
- Criada pasta Configuration com classe IdentityConfiguration (definindo Resources, Scopes e Clients)
- Configurados os serviços do IdentityServer

--- a/MicroShop.IdentiryServer/appsettings.json
+++ b/MicroShop.IdentiryServer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=MicroShopIdentityServer;Uid=root;PWD=123456"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
