feat: implementar autenticação e autorização nos projetos Web e ProductApi
- Adicionados atributos [Authorize] e [Authorize(Roles = Role.Admin)] nos controllers
  - MicroShop.Web: ProductsController
  - MicroShop.ProductApi: ProductsController e CategoriesController
- Configurada autenticação no MicroShop.Web
  - Referências: Microsoft.AspNetCore.Authentication, Microsoft.AspNetCore.Authentication.OpenIdConnect, System.IdentityModel.Tokens.Jwt
  - Configuração realizada na classe Program
- Configurada autenticação no MicroShop.ProductApi
  - Referência: Microsoft.AspNetCore.Authentication.JwtBearer
  - Configuração realizada na classe Program
- Implementado link de Login no MicroShop.Web para utilização de tokens e integração com IdentityServer

--- a/MicroShop.Web/appsettings.json
+++ b/MicroShop.Web/appsettings.json
@@ -7,6 +7,10 @@
   },
   "AllowedHosts": "*",
   "ServiceUri": {
-    "ProductApi": "http://localhost:7168"
+    "ProductApi": "http://localhost:7168",
+    "IdentityServer": "https://localhost:7006"
+  },
+  "Client": {
+    "Secret": "marcomelo#2@01MarcoM3L0"
   }
 }
