--- a/MicroShop.ProductApi/appsettings.json
+++ b/MicroShop.ProductApi/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MicroShop.IdentityServer": {
+    "ApplicationUrl":  "https://localhost:7006"
+  }
 }
