feat: integrar CartApi ao projeto Web com ViewModels e serviço
- Criadas ViewModels para definir a lógica das Views
- Implementado serviço CartService e interface ICartService para acessar o CartApi
- Definido endereço do CartApi em appsettings.json
- Configurado HttpClient nomeado na classe Program
- Registrado CartService no contêiner DI com tempo de vida addScoped
- Ajustada view ProductDetails.cshtml para integração com carrinho
- Criado método Action ProductDetailsPost em HomeController
- Validada criação do carrinho no banco de dados

--- a/MicroShop.Web/appsettings.json
+++ b/MicroShop.Web/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "ServiceUri": {
     "ProductApi": "http://localhost:7168",
-    "IdentityServer": "https://localhost:7006"
+    "IdentityServer": "https://localhost:7006",
+    "CartApi": "https://localhost:7043"
   },
   "Client": {
     "Secret": "marcomelo#2@01MarcoM3L0"
